# openstack-ansible-os_manila

./: .gitreview  CONTRIBUTING.rst  README.rst  run_tests.sh  setup.cfg  tox.ini
defaults/: main.yml
doc/source/: conf.py  configure-manila.rst  index.rst
handlers/: main.yml
meta/: main.yml  openstack-ansible.yml
releasenotes/source/: conf.py  index.rst
tasks/: main.yml  manila_backend_cephfs.yml  manila_backends.yml  manila_cleanup_old_facts.yml  manila_db_setup.yml  manila_db_sync.yml  manila_install.yml  manila_install_source.yml  manila_keys.yml  manila_lvm_config.yml  manila_post_install.yml  manila_pre_install.yml  manila_service_setup.yml  manila_uwsgi.yml  mq_setup.yml
templates/: manila-uwsgi.ini.j2  manila.conf.j2  rootwrap.conf.j2
tests/: ansible-role-requirements.yml  inventory  os_manila-overrides.yml  test-install-manila.yml  test-setup-manila-localhost.yml  test.yml
tests/host_vars/: manila1.yml  storage1.yml
vars/: debian.yml  distro_install.yml  main.yml  redhat.yml  source_install.yml  suse.yml
zuul.d/: project.yaml
